parser.out
Created by PLY (http://www.dabeaz.com/ply)

Unused terminals:

    BITAND
    BITNOT
    BITOR
    BITXOR
    COLON
    DEC
    DIVEQUALS
    DOT
    INC
    LSHIFT
    MINUSEQUALS
    MOD
    MODEQUALS
    MULTEQUALS
    NOT
    PLUSEQUALS
    RSHIFT
    URSHIFT
    XOR

Grammar

Rule 0     S' -> program
Rule 1     program -> lista_declaraciones
Rule 2     lista_declaraciones -> declaracion lista_declaraciones
Rule 3     lista_declaraciones -> declaracion
Rule 4     declaracion -> declaracion_variable
Rule 5     declaracion -> declaracion_funcion
Rule 6     declaracion -> declaracion_clase
Rule 7     declaracion_clase -> CLASS IDENTIFIER LBRACE lista_miembros RBRACE
Rule 8     declaracion_clase -> modificador CLASS IDENTIFIER LBRACE lista_miembros RBRACE
Rule 9     lista_miembros -> lista_miembros miembro
Rule 10    lista_miembros -> miembro
Rule 11    lista_miembros -> <empty>
Rule 12    miembro -> declaracion_variable
Rule 13    miembro -> declaracion_funcion
Rule 14    tipo -> simple_type
Rule 15    tipo -> simple_type LBRACKET RBRACKET
Rule 16    simple_type -> INT_TYPE
Rule 17    simple_type -> FLOAT
Rule 18    simple_type -> BOOLEAN
Rule 19    simple_type -> CHAR
Rule 20    simple_type -> STRING
Rule 21    simple_type -> IDENTIFIER
Rule 22    tipo_funcion -> INT_TYPE
Rule 23    tipo_funcion -> FLOAT
Rule 24    tipo_funcion -> BOOLEAN
Rule 25    tipo_funcion -> CHAR
Rule 26    tipo_funcion -> STRING
Rule 27    tipo_funcion -> VOID
Rule 28    declaracion_variable -> tipo IDENTIFIER EQUALS expresion SEMICOLON
Rule 29    declaracion_variable -> tipo IDENTIFIER SEMICOLON
Rule 30    declaracion_funcion -> lista_modificadores tipo_funcion IDENTIFIER LPAREN lista_parametros RPAREN bloque
Rule 31    lista_modificadores -> lista_modificadores modificador
Rule 32    lista_modificadores -> modificador
Rule 33    modificador -> PUBLIC
Rule 34    modificador -> PRIVATE
Rule 35    modificador -> PROTECTED
Rule 36    modificador -> STATIC
Rule 37    lista_parametros -> parametro
Rule 38    lista_parametros -> lista_parametros COMMA parametro
Rule 39    lista_parametros -> <empty>
Rule 40    parametro -> tipo IDENTIFIER
Rule 41    bloque -> LBRACE lista_sentencias RBRACE
Rule 42    lista_sentencias -> sentencia lista_sentencias
Rule 43    lista_sentencias -> sentencia
Rule 44    lista_sentencias -> <empty>
Rule 45    expresion -> expresion_aritmetica
Rule 46    expresion -> expresion_logica
Rule 47    expresion -> expresion_identificador
Rule 48    expresion -> expresion_literal
Rule 49    expresion -> expresion_comparacion
Rule 50    expresion_aritmetica -> expresion PLUS expresion
Rule 51    expresion_aritmetica -> expresion MINUS expresion
Rule 52    expresion_aritmetica -> expresion MULT expresion
Rule 53    expresion_aritmetica -> expresion DIV expresion
Rule 54    expresion_logica -> expresion AND expresion
Rule 55    expresion_logica -> expresion OR expresion
Rule 56    expresion_identificador -> IDENTIFIER
Rule 57    expresion_literal -> NUMBER
Rule 58    expresion_literal -> STRING_LITERAL
Rule 59    expresion_literal -> CHARACTER_LITERAL
Rule 60    expresion_literal -> BOOLEAN_LITERAL
Rule 61    expresion_literal -> NULL_LITERAL
Rule 62    expresion_comparacion -> expresion LT expresion
Rule 63    expresion_comparacion -> expresion LTE expresion
Rule 64    expresion_comparacion -> expresion GT expresion
Rule 65    expresion_comparacion -> expresion GTE expresion
Rule 66    expresion_comparacion -> expresion EQ expresion
Rule 67    expresion_comparacion -> expresion NEQ expresion
Rule 68    sentencia -> declaracion_variable
Rule 69    sentencia -> IDENTIFIER EQUALS expresion SEMICOLON
Rule 70    sentencia -> IF LPAREN expresion RPAREN bloque
Rule 71    sentencia -> IF LPAREN expresion RPAREN bloque ELSE bloque
Rule 72    sentencia -> FOR LPAREN tipo IDENTIFIER EQUALS expresion SEMICOLON expresion SEMICOLON expresion RPAREN bloque
Rule 73    sentencia -> WHILE LPAREN expresion RPAREN bloque

Terminals, with rules where they appear

AND                  : 54
BITAND               : 
BITNOT               : 
BITOR                : 
BITXOR               : 
BOOLEAN              : 18 24
BOOLEAN_LITERAL      : 60
CHAR                 : 19 25
CHARACTER_LITERAL    : 59
CLASS                : 7 8
COLON                : 
COMMA                : 38
DEC                  : 
DIV                  : 53
DIVEQUALS            : 
DOT                  : 
ELSE                 : 71
EQ                   : 66
EQUALS               : 28 69 72
FLOAT                : 17 23
FOR                  : 72
GT                   : 64
GTE                  : 65
IDENTIFIER           : 7 8 21 28 29 30 40 56 69 72
IF                   : 70 71
INC                  : 
INT_TYPE             : 16 22
LBRACE               : 7 8 41
LBRACKET             : 15
LPAREN               : 30 70 71 72 73
LSHIFT               : 
LT                   : 62
LTE                  : 63
MINUS                : 51
MINUSEQUALS          : 
MOD                  : 
MODEQUALS            : 
MULT                 : 52
MULTEQUALS           : 
NEQ                  : 67
NOT                  : 
NULL_LITERAL         : 61
NUMBER               : 57
OR                   : 55
PLUS                 : 50
PLUSEQUALS           : 
PRIVATE              : 34
PROTECTED            : 35
PUBLIC               : 33
RBRACE               : 7 8 41
RBRACKET             : 15
RPAREN               : 30 70 71 72 73
RSHIFT               : 
SEMICOLON            : 28 29 69 72 72
STATIC               : 36
STRING               : 20 26
STRING_LITERAL       : 58
URSHIFT              : 
VOID                 : 27
WHILE                : 73
XOR                  : 
error                : 

Nonterminals, with rules where they appear

bloque               : 30 70 71 71 72 73
declaracion          : 2 3
declaracion_clase    : 6
declaracion_funcion  : 5 13
declaracion_variable : 4 12 68
expresion            : 28 50 50 51 51 52 52 53 53 54 54 55 55 62 62 63 63 64 64 65 65 66 66 67 67 69 70 71 72 72 72 73
expresion_aritmetica : 45
expresion_comparacion : 49
expresion_identificador : 47
expresion_literal    : 48
expresion_logica     : 46
lista_declaraciones  : 1 2
lista_miembros       : 7 8 9
lista_modificadores  : 30 31
lista_parametros     : 30 38
lista_sentencias     : 41 42
miembro              : 9 10
modificador          : 8 31 32
parametro            : 37 38
program              : 0
sentencia            : 42 43
simple_type          : 14 15
tipo                 : 28 29 40 72
tipo_funcion         : 30


state 0

    (0) S' -> . program
    (1) program -> . lista_declaraciones
    (2) lista_declaraciones -> . declaracion lista_declaraciones
    (3) lista_declaraciones -> . declaracion
    (4) declaracion -> . declaracion_variable
    (5) declaracion -> . declaracion_funcion
    (6) declaracion -> . declaracion_clase
    (28) declaracion_variable -> . tipo IDENTIFIER EQUALS expresion SEMICOLON
    (29) declaracion_variable -> . tipo IDENTIFIER SEMICOLON
    (30) declaracion_funcion -> . lista_modificadores tipo_funcion IDENTIFIER LPAREN lista_parametros RPAREN bloque
    (7) declaracion_clase -> . CLASS IDENTIFIER LBRACE lista_miembros RBRACE
    (8) declaracion_clase -> . modificador CLASS IDENTIFIER LBRACE lista_miembros RBRACE
    (14) tipo -> . simple_type
    (15) tipo -> . simple_type LBRACKET RBRACKET
    (31) lista_modificadores -> . lista_modificadores modificador
    (32) lista_modificadores -> . modificador
    (33) modificador -> . PUBLIC
    (34) modificador -> . PRIVATE
    (35) modificador -> . PROTECTED
    (36) modificador -> . STATIC
    (16) simple_type -> . INT_TYPE
    (17) simple_type -> . FLOAT
    (18) simple_type -> . BOOLEAN
    (19) simple_type -> . CHAR
    (20) simple_type -> . STRING
    (21) simple_type -> . IDENTIFIER

    CLASS           shift and go to state 10
    PUBLIC          shift and go to state 13
    PRIVATE         shift and go to state 14
    PROTECTED       shift and go to state 15
    STATIC          shift and go to state 16
    INT_TYPE        shift and go to state 17
    FLOAT           shift and go to state 18
    BOOLEAN         shift and go to state 19
    CHAR            shift and go to state 20
    STRING          shift and go to state 21
    IDENTIFIER      shift and go to state 8

    program                        shift and go to state 1
    lista_declaraciones            shift and go to state 2
    declaracion                    shift and go to state 3
    declaracion_variable           shift and go to state 4
    declaracion_funcion            shift and go to state 5
    declaracion_clase              shift and go to state 6
    tipo                           shift and go to state 7
    lista_modificadores            shift and go to state 9
    modificador                    shift and go to state 11
    simple_type                    shift and go to state 12

state 1

    (0) S' -> program .



state 2

    (1) program -> lista_declaraciones .

    $end            reduce using rule 1 (program -> lista_declaraciones .)


state 3

    (2) lista_declaraciones -> declaracion . lista_declaraciones
    (3) lista_declaraciones -> declaracion .
    (2) lista_declaraciones -> . declaracion lista_declaraciones
    (3) lista_declaraciones -> . declaracion
    (4) declaracion -> . declaracion_variable
    (5) declaracion -> . declaracion_funcion
    (6) declaracion -> . declaracion_clase
    (28) declaracion_variable -> . tipo IDENTIFIER EQUALS expresion SEMICOLON
    (29) declaracion_variable -> . tipo IDENTIFIER SEMICOLON
    (30) declaracion_funcion -> . lista_modificadores tipo_funcion IDENTIFIER LPAREN lista_parametros RPAREN bloque
    (7) declaracion_clase -> . CLASS IDENTIFIER LBRACE lista_miembros RBRACE
    (8) declaracion_clase -> . modificador CLASS IDENTIFIER LBRACE lista_miembros RBRACE
    (14) tipo -> . simple_type
    (15) tipo -> . simple_type LBRACKET RBRACKET
    (31) lista_modificadores -> . lista_modificadores modificador
    (32) lista_modificadores -> . modificador
    (33) modificador -> . PUBLIC
    (34) modificador -> . PRIVATE
    (35) modificador -> . PROTECTED
    (36) modificador -> . STATIC
    (16) simple_type -> . INT_TYPE
    (17) simple_type -> . FLOAT
    (18) simple_type -> . BOOLEAN
    (19) simple_type -> . CHAR
    (20) simple_type -> . STRING
    (21) simple_type -> . IDENTIFIER

    $end            reduce using rule 3 (lista_declaraciones -> declaracion .)
    CLASS           shift and go to state 10
    PUBLIC          shift and go to state 13
    PRIVATE         shift and go to state 14
    PROTECTED       shift and go to state 15
    STATIC          shift and go to state 16
    INT_TYPE        shift and go to state 17
    FLOAT           shift and go to state 18
    BOOLEAN         shift and go to state 19
    CHAR            shift and go to state 20
    STRING          shift and go to state 21
    IDENTIFIER      shift and go to state 8

    declaracion                    shift and go to state 3
    lista_declaraciones            shift and go to state 22
    declaracion_variable           shift and go to state 4
    declaracion_funcion            shift and go to state 5
    declaracion_clase              shift and go to state 6
    tipo                           shift and go to state 7
    lista_modificadores            shift and go to state 9
    modificador                    shift and go to state 11
    simple_type                    shift and go to state 12

state 4

    (4) declaracion -> declaracion_variable .

    CLASS           reduce using rule 4 (declaracion -> declaracion_variable .)
    PUBLIC          reduce using rule 4 (declaracion -> declaracion_variable .)
    PRIVATE         reduce using rule 4 (declaracion -> declaracion_variable .)
    PROTECTED       reduce using rule 4 (declaracion -> declaracion_variable .)
    STATIC          reduce using rule 4 (declaracion -> declaracion_variable .)
    INT_TYPE        reduce using rule 4 (declaracion -> declaracion_variable .)
    FLOAT           reduce using rule 4 (declaracion -> declaracion_variable .)
    BOOLEAN         reduce using rule 4 (declaracion -> declaracion_variable .)
    CHAR            reduce using rule 4 (declaracion -> declaracion_variable .)
    STRING          reduce using rule 4 (declaracion -> declaracion_variable .)
    IDENTIFIER      reduce using rule 4 (declaracion -> declaracion_variable .)
    $end            reduce using rule 4 (declaracion -> declaracion_variable .)


state 5

    (5) declaracion -> declaracion_funcion .

    CLASS           reduce using rule 5 (declaracion -> declaracion_funcion .)
    PUBLIC          reduce using rule 5 (declaracion -> declaracion_funcion .)
    PRIVATE         reduce using rule 5 (declaracion -> declaracion_funcion .)
    PROTECTED       reduce using rule 5 (declaracion -> declaracion_funcion .)
    STATIC          reduce using rule 5 (declaracion -> declaracion_funcion .)
    INT_TYPE        reduce using rule 5 (declaracion -> declaracion_funcion .)
    FLOAT           reduce using rule 5 (declaracion -> declaracion_funcion .)
    BOOLEAN         reduce using rule 5 (declaracion -> declaracion_funcion .)
    CHAR            reduce using rule 5 (declaracion -> declaracion_funcion .)
    STRING          reduce using rule 5 (declaracion -> declaracion_funcion .)
    IDENTIFIER      reduce using rule 5 (declaracion -> declaracion_funcion .)
    $end            reduce using rule 5 (declaracion -> declaracion_funcion .)


state 6

    (6) declaracion -> declaracion_clase .

    CLASS           reduce using rule 6 (declaracion -> declaracion_clase .)
    PUBLIC          reduce using rule 6 (declaracion -> declaracion_clase .)
    PRIVATE         reduce using rule 6 (declaracion -> declaracion_clase .)
    PROTECTED       reduce using rule 6 (declaracion -> declaracion_clase .)
    STATIC          reduce using rule 6 (declaracion -> declaracion_clase .)
    INT_TYPE        reduce using rule 6 (declaracion -> declaracion_clase .)
    FLOAT           reduce using rule 6 (declaracion -> declaracion_clase .)
    BOOLEAN         reduce using rule 6 (declaracion -> declaracion_clase .)
    CHAR            reduce using rule 6 (declaracion -> declaracion_clase .)
    STRING          reduce using rule 6 (declaracion -> declaracion_clase .)
    IDENTIFIER      reduce using rule 6 (declaracion -> declaracion_clase .)
    $end            reduce using rule 6 (declaracion -> declaracion_clase .)


state 7

    (28) declaracion_variable -> tipo . IDENTIFIER EQUALS expresion SEMICOLON
    (29) declaracion_variable -> tipo . IDENTIFIER SEMICOLON

    IDENTIFIER      shift and go to state 23


state 8

    (21) simple_type -> IDENTIFIER .

    LBRACKET        reduce using rule 21 (simple_type -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 21 (simple_type -> IDENTIFIER .)


state 9

    (30) declaracion_funcion -> lista_modificadores . tipo_funcion IDENTIFIER LPAREN lista_parametros RPAREN bloque
    (31) lista_modificadores -> lista_modificadores . modificador
    (22) tipo_funcion -> . INT_TYPE
    (23) tipo_funcion -> . FLOAT
    (24) tipo_funcion -> . BOOLEAN
    (25) tipo_funcion -> . CHAR
    (26) tipo_funcion -> . STRING
    (27) tipo_funcion -> . VOID
    (33) modificador -> . PUBLIC
    (34) modificador -> . PRIVATE
    (35) modificador -> . PROTECTED
    (36) modificador -> . STATIC

    INT_TYPE        shift and go to state 26
    FLOAT           shift and go to state 27
    BOOLEAN         shift and go to state 28
    CHAR            shift and go to state 29
    STRING          shift and go to state 30
    VOID            shift and go to state 31
    PUBLIC          shift and go to state 13
    PRIVATE         shift and go to state 14
    PROTECTED       shift and go to state 15
    STATIC          shift and go to state 16

    tipo_funcion                   shift and go to state 24
    modificador                    shift and go to state 25

state 10

    (7) declaracion_clase -> CLASS . IDENTIFIER LBRACE lista_miembros RBRACE

    IDENTIFIER      shift and go to state 32


state 11

    (8) declaracion_clase -> modificador . CLASS IDENTIFIER LBRACE lista_miembros RBRACE
    (32) lista_modificadores -> modificador .

    CLASS           shift and go to state 33
    INT_TYPE        reduce using rule 32 (lista_modificadores -> modificador .)
    FLOAT           reduce using rule 32 (lista_modificadores -> modificador .)
    BOOLEAN         reduce using rule 32 (lista_modificadores -> modificador .)
    CHAR            reduce using rule 32 (lista_modificadores -> modificador .)
    STRING          reduce using rule 32 (lista_modificadores -> modificador .)
    VOID            reduce using rule 32 (lista_modificadores -> modificador .)
    PUBLIC          reduce using rule 32 (lista_modificadores -> modificador .)
    PRIVATE         reduce using rule 32 (lista_modificadores -> modificador .)
    PROTECTED       reduce using rule 32 (lista_modificadores -> modificador .)
    STATIC          reduce using rule 32 (lista_modificadores -> modificador .)


state 12

    (14) tipo -> simple_type .
    (15) tipo -> simple_type . LBRACKET RBRACKET

    IDENTIFIER      reduce using rule 14 (tipo -> simple_type .)
    LBRACKET        shift and go to state 34


state 13

    (33) modificador -> PUBLIC .

    CLASS           reduce using rule 33 (modificador -> PUBLIC .)
    INT_TYPE        reduce using rule 33 (modificador -> PUBLIC .)
    FLOAT           reduce using rule 33 (modificador -> PUBLIC .)
    BOOLEAN         reduce using rule 33 (modificador -> PUBLIC .)
    CHAR            reduce using rule 33 (modificador -> PUBLIC .)
    STRING          reduce using rule 33 (modificador -> PUBLIC .)
    VOID            reduce using rule 33 (modificador -> PUBLIC .)
    PUBLIC          reduce using rule 33 (modificador -> PUBLIC .)
    PRIVATE         reduce using rule 33 (modificador -> PUBLIC .)
    PROTECTED       reduce using rule 33 (modificador -> PUBLIC .)
    STATIC          reduce using rule 33 (modificador -> PUBLIC .)


state 14

    (34) modificador -> PRIVATE .

    CLASS           reduce using rule 34 (modificador -> PRIVATE .)
    INT_TYPE        reduce using rule 34 (modificador -> PRIVATE .)
    FLOAT           reduce using rule 34 (modificador -> PRIVATE .)
    BOOLEAN         reduce using rule 34 (modificador -> PRIVATE .)
    CHAR            reduce using rule 34 (modificador -> PRIVATE .)
    STRING          reduce using rule 34 (modificador -> PRIVATE .)
    VOID            reduce using rule 34 (modificador -> PRIVATE .)
    PUBLIC          reduce using rule 34 (modificador -> PRIVATE .)
    PRIVATE         reduce using rule 34 (modificador -> PRIVATE .)
    PROTECTED       reduce using rule 34 (modificador -> PRIVATE .)
    STATIC          reduce using rule 34 (modificador -> PRIVATE .)


state 15

    (35) modificador -> PROTECTED .

    CLASS           reduce using rule 35 (modificador -> PROTECTED .)
    INT_TYPE        reduce using rule 35 (modificador -> PROTECTED .)
    FLOAT           reduce using rule 35 (modificador -> PROTECTED .)
    BOOLEAN         reduce using rule 35 (modificador -> PROTECTED .)
    CHAR            reduce using rule 35 (modificador -> PROTECTED .)
    STRING          reduce using rule 35 (modificador -> PROTECTED .)
    VOID            reduce using rule 35 (modificador -> PROTECTED .)
    PUBLIC          reduce using rule 35 (modificador -> PROTECTED .)
    PRIVATE         reduce using rule 35 (modificador -> PROTECTED .)
    PROTECTED       reduce using rule 35 (modificador -> PROTECTED .)
    STATIC          reduce using rule 35 (modificador -> PROTECTED .)


state 16

    (36) modificador -> STATIC .

    CLASS           reduce using rule 36 (modificador -> STATIC .)
    INT_TYPE        reduce using rule 36 (modificador -> STATIC .)
    FLOAT           reduce using rule 36 (modificador -> STATIC .)
    BOOLEAN         reduce using rule 36 (modificador -> STATIC .)
    CHAR            reduce using rule 36 (modificador -> STATIC .)
    STRING          reduce using rule 36 (modificador -> STATIC .)
    VOID            reduce using rule 36 (modificador -> STATIC .)
    PUBLIC          reduce using rule 36 (modificador -> STATIC .)
    PRIVATE         reduce using rule 36 (modificador -> STATIC .)
    PROTECTED       reduce using rule 36 (modificador -> STATIC .)
    STATIC          reduce using rule 36 (modificador -> STATIC .)


state 17

    (16) simple_type -> INT_TYPE .

    LBRACKET        reduce using rule 16 (simple_type -> INT_TYPE .)
    IDENTIFIER      reduce using rule 16 (simple_type -> INT_TYPE .)


state 18

    (17) simple_type -> FLOAT .

    LBRACKET        reduce using rule 17 (simple_type -> FLOAT .)
    IDENTIFIER      reduce using rule 17 (simple_type -> FLOAT .)


state 19

    (18) simple_type -> BOOLEAN .

    LBRACKET        reduce using rule 18 (simple_type -> BOOLEAN .)
    IDENTIFIER      reduce using rule 18 (simple_type -> BOOLEAN .)


state 20

    (19) simple_type -> CHAR .

    LBRACKET        reduce using rule 19 (simple_type -> CHAR .)
    IDENTIFIER      reduce using rule 19 (simple_type -> CHAR .)


state 21

    (20) simple_type -> STRING .

    LBRACKET        reduce using rule 20 (simple_type -> STRING .)
    IDENTIFIER      reduce using rule 20 (simple_type -> STRING .)


state 22

    (2) lista_declaraciones -> declaracion lista_declaraciones .

    $end            reduce using rule 2 (lista_declaraciones -> declaracion lista_declaraciones .)


state 23

    (28) declaracion_variable -> tipo IDENTIFIER . EQUALS expresion SEMICOLON
    (29) declaracion_variable -> tipo IDENTIFIER . SEMICOLON

    EQUALS          shift and go to state 35
    SEMICOLON       shift and go to state 36


state 24

    (30) declaracion_funcion -> lista_modificadores tipo_funcion . IDENTIFIER LPAREN lista_parametros RPAREN bloque

    IDENTIFIER      shift and go to state 37


state 25

    (31) lista_modificadores -> lista_modificadores modificador .

    INT_TYPE        reduce using rule 31 (lista_modificadores -> lista_modificadores modificador .)
    FLOAT           reduce using rule 31 (lista_modificadores -> lista_modificadores modificador .)
    BOOLEAN         reduce using rule 31 (lista_modificadores -> lista_modificadores modificador .)
    CHAR            reduce using rule 31 (lista_modificadores -> lista_modificadores modificador .)
    STRING          reduce using rule 31 (lista_modificadores -> lista_modificadores modificador .)
    VOID            reduce using rule 31 (lista_modificadores -> lista_modificadores modificador .)
    PUBLIC          reduce using rule 31 (lista_modificadores -> lista_modificadores modificador .)
    PRIVATE         reduce using rule 31 (lista_modificadores -> lista_modificadores modificador .)
    PROTECTED       reduce using rule 31 (lista_modificadores -> lista_modificadores modificador .)
    STATIC          reduce using rule 31 (lista_modificadores -> lista_modificadores modificador .)


state 26

    (22) tipo_funcion -> INT_TYPE .

    IDENTIFIER      reduce using rule 22 (tipo_funcion -> INT_TYPE .)


state 27

    (23) tipo_funcion -> FLOAT .

    IDENTIFIER      reduce using rule 23 (tipo_funcion -> FLOAT .)


state 28

    (24) tipo_funcion -> BOOLEAN .

    IDENTIFIER      reduce using rule 24 (tipo_funcion -> BOOLEAN .)


state 29

    (25) tipo_funcion -> CHAR .

    IDENTIFIER      reduce using rule 25 (tipo_funcion -> CHAR .)


state 30

    (26) tipo_funcion -> STRING .

    IDENTIFIER      reduce using rule 26 (tipo_funcion -> STRING .)


state 31

    (27) tipo_funcion -> VOID .

    IDENTIFIER      reduce using rule 27 (tipo_funcion -> VOID .)


state 32

    (7) declaracion_clase -> CLASS IDENTIFIER . LBRACE lista_miembros RBRACE

    LBRACE          shift and go to state 38


state 33

    (8) declaracion_clase -> modificador CLASS . IDENTIFIER LBRACE lista_miembros RBRACE

    IDENTIFIER      shift and go to state 39


state 34

    (15) tipo -> simple_type LBRACKET . RBRACKET

    RBRACKET        shift and go to state 40


state 35

    (28) declaracion_variable -> tipo IDENTIFIER EQUALS . expresion SEMICOLON
    (45) expresion -> . expresion_aritmetica
    (46) expresion -> . expresion_logica
    (47) expresion -> . expresion_identificador
    (48) expresion -> . expresion_literal
    (49) expresion -> . expresion_comparacion
    (50) expresion_aritmetica -> . expresion PLUS expresion
    (51) expresion_aritmetica -> . expresion MINUS expresion
    (52) expresion_aritmetica -> . expresion MULT expresion
    (53) expresion_aritmetica -> . expresion DIV expresion
    (54) expresion_logica -> . expresion AND expresion
    (55) expresion_logica -> . expresion OR expresion
    (56) expresion_identificador -> . IDENTIFIER
    (57) expresion_literal -> . NUMBER
    (58) expresion_literal -> . STRING_LITERAL
    (59) expresion_literal -> . CHARACTER_LITERAL
    (60) expresion_literal -> . BOOLEAN_LITERAL
    (61) expresion_literal -> . NULL_LITERAL
    (62) expresion_comparacion -> . expresion LT expresion
    (63) expresion_comparacion -> . expresion LTE expresion
    (64) expresion_comparacion -> . expresion GT expresion
    (65) expresion_comparacion -> . expresion GTE expresion
    (66) expresion_comparacion -> . expresion EQ expresion
    (67) expresion_comparacion -> . expresion NEQ expresion

    IDENTIFIER      shift and go to state 41
    NUMBER          shift and go to state 48
    STRING_LITERAL  shift and go to state 49
    CHARACTER_LITERAL shift and go to state 50
    BOOLEAN_LITERAL shift and go to state 51
    NULL_LITERAL    shift and go to state 52

    expresion                      shift and go to state 42
    expresion_aritmetica           shift and go to state 43
    expresion_logica               shift and go to state 44
    expresion_identificador        shift and go to state 45
    expresion_literal              shift and go to state 46
    expresion_comparacion          shift and go to state 47

state 36

    (29) declaracion_variable -> tipo IDENTIFIER SEMICOLON .

    CLASS           reduce using rule 29 (declaracion_variable -> tipo IDENTIFIER SEMICOLON .)
    PUBLIC          reduce using rule 29 (declaracion_variable -> tipo IDENTIFIER SEMICOLON .)
    PRIVATE         reduce using rule 29 (declaracion_variable -> tipo IDENTIFIER SEMICOLON .)
    PROTECTED       reduce using rule 29 (declaracion_variable -> tipo IDENTIFIER SEMICOLON .)
    STATIC          reduce using rule 29 (declaracion_variable -> tipo IDENTIFIER SEMICOLON .)
    INT_TYPE        reduce using rule 29 (declaracion_variable -> tipo IDENTIFIER SEMICOLON .)
    FLOAT           reduce using rule 29 (declaracion_variable -> tipo IDENTIFIER SEMICOLON .)
    BOOLEAN         reduce using rule 29 (declaracion_variable -> tipo IDENTIFIER SEMICOLON .)
    CHAR            reduce using rule 29 (declaracion_variable -> tipo IDENTIFIER SEMICOLON .)
    STRING          reduce using rule 29 (declaracion_variable -> tipo IDENTIFIER SEMICOLON .)
    IDENTIFIER      reduce using rule 29 (declaracion_variable -> tipo IDENTIFIER SEMICOLON .)
    $end            reduce using rule 29 (declaracion_variable -> tipo IDENTIFIER SEMICOLON .)
    RBRACE          reduce using rule 29 (declaracion_variable -> tipo IDENTIFIER SEMICOLON .)
    IF              reduce using rule 29 (declaracion_variable -> tipo IDENTIFIER SEMICOLON .)
    FOR             reduce using rule 29 (declaracion_variable -> tipo IDENTIFIER SEMICOLON .)
    WHILE           reduce using rule 29 (declaracion_variable -> tipo IDENTIFIER SEMICOLON .)


state 37

    (30) declaracion_funcion -> lista_modificadores tipo_funcion IDENTIFIER . LPAREN lista_parametros RPAREN bloque

    LPAREN          shift and go to state 53


state 38

    (7) declaracion_clase -> CLASS IDENTIFIER LBRACE . lista_miembros RBRACE
    (9) lista_miembros -> . lista_miembros miembro
    (10) lista_miembros -> . miembro
    (11) lista_miembros -> .
    (12) miembro -> . declaracion_variable
    (13) miembro -> . declaracion_funcion
    (28) declaracion_variable -> . tipo IDENTIFIER EQUALS expresion SEMICOLON
    (29) declaracion_variable -> . tipo IDENTIFIER SEMICOLON
    (30) declaracion_funcion -> . lista_modificadores tipo_funcion IDENTIFIER LPAREN lista_parametros RPAREN bloque
    (14) tipo -> . simple_type
    (15) tipo -> . simple_type LBRACKET RBRACKET
    (31) lista_modificadores -> . lista_modificadores modificador
    (32) lista_modificadores -> . modificador
    (16) simple_type -> . INT_TYPE
    (17) simple_type -> . FLOAT
    (18) simple_type -> . BOOLEAN
    (19) simple_type -> . CHAR
    (20) simple_type -> . STRING
    (21) simple_type -> . IDENTIFIER
    (33) modificador -> . PUBLIC
    (34) modificador -> . PRIVATE
    (35) modificador -> . PROTECTED
    (36) modificador -> . STATIC

  ! shift/reduce conflict for INT_TYPE resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for BOOLEAN resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for IDENTIFIER resolved as shift
  ! shift/reduce conflict for PUBLIC resolved as shift
  ! shift/reduce conflict for PRIVATE resolved as shift
  ! shift/reduce conflict for PROTECTED resolved as shift
  ! shift/reduce conflict for STATIC resolved as shift
    RBRACE          reduce using rule 11 (lista_miembros -> .)
    INT_TYPE        shift and go to state 17
    FLOAT           shift and go to state 18
    BOOLEAN         shift and go to state 19
    CHAR            shift and go to state 20
    STRING          shift and go to state 21
    IDENTIFIER      shift and go to state 8
    PUBLIC          shift and go to state 13
    PRIVATE         shift and go to state 14
    PROTECTED       shift and go to state 15
    STATIC          shift and go to state 16

  ! INT_TYPE        [ reduce using rule 11 (lista_miembros -> .) ]
  ! FLOAT           [ reduce using rule 11 (lista_miembros -> .) ]
  ! BOOLEAN         [ reduce using rule 11 (lista_miembros -> .) ]
  ! CHAR            [ reduce using rule 11 (lista_miembros -> .) ]
  ! STRING          [ reduce using rule 11 (lista_miembros -> .) ]
  ! IDENTIFIER      [ reduce using rule 11 (lista_miembros -> .) ]
  ! PUBLIC          [ reduce using rule 11 (lista_miembros -> .) ]
  ! PRIVATE         [ reduce using rule 11 (lista_miembros -> .) ]
  ! PROTECTED       [ reduce using rule 11 (lista_miembros -> .) ]
  ! STATIC          [ reduce using rule 11 (lista_miembros -> .) ]

    lista_miembros                 shift and go to state 54
    miembro                        shift and go to state 55
    declaracion_variable           shift and go to state 56
    declaracion_funcion            shift and go to state 57
    tipo                           shift and go to state 7
    lista_modificadores            shift and go to state 9
    simple_type                    shift and go to state 12
    modificador                    shift and go to state 58

state 39

    (8) declaracion_clase -> modificador CLASS IDENTIFIER . LBRACE lista_miembros RBRACE

    LBRACE          shift and go to state 59


state 40

    (15) tipo -> simple_type LBRACKET RBRACKET .

    IDENTIFIER      reduce using rule 15 (tipo -> simple_type LBRACKET RBRACKET .)


state 41

    (56) expresion_identificador -> IDENTIFIER .

    SEMICOLON       reduce using rule 56 (expresion_identificador -> IDENTIFIER .)
    PLUS            reduce using rule 56 (expresion_identificador -> IDENTIFIER .)
    MINUS           reduce using rule 56 (expresion_identificador -> IDENTIFIER .)
    MULT            reduce using rule 56 (expresion_identificador -> IDENTIFIER .)
    DIV             reduce using rule 56 (expresion_identificador -> IDENTIFIER .)
    AND             reduce using rule 56 (expresion_identificador -> IDENTIFIER .)
    OR              reduce using rule 56 (expresion_identificador -> IDENTIFIER .)
    LT              reduce using rule 56 (expresion_identificador -> IDENTIFIER .)
    LTE             reduce using rule 56 (expresion_identificador -> IDENTIFIER .)
    GT              reduce using rule 56 (expresion_identificador -> IDENTIFIER .)
    GTE             reduce using rule 56 (expresion_identificador -> IDENTIFIER .)
    EQ              reduce using rule 56 (expresion_identificador -> IDENTIFIER .)
    NEQ             reduce using rule 56 (expresion_identificador -> IDENTIFIER .)
    RPAREN          reduce using rule 56 (expresion_identificador -> IDENTIFIER .)


state 42

    (28) declaracion_variable -> tipo IDENTIFIER EQUALS expresion . SEMICOLON
    (50) expresion_aritmetica -> expresion . PLUS expresion
    (51) expresion_aritmetica -> expresion . MINUS expresion
    (52) expresion_aritmetica -> expresion . MULT expresion
    (53) expresion_aritmetica -> expresion . DIV expresion
    (54) expresion_logica -> expresion . AND expresion
    (55) expresion_logica -> expresion . OR expresion
    (62) expresion_comparacion -> expresion . LT expresion
    (63) expresion_comparacion -> expresion . LTE expresion
    (64) expresion_comparacion -> expresion . GT expresion
    (65) expresion_comparacion -> expresion . GTE expresion
    (66) expresion_comparacion -> expresion . EQ expresion
    (67) expresion_comparacion -> expresion . NEQ expresion
